--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -1,4 +1,24 @@
+@import url('https://fonts.googleapis.com/css?family=Grand+Hotel&display=swap');
+
 $charcoal: #bbb;
+
+
+h1 {
+  font-family: 'Grand Hotel', cursive;
+}
+
+header > a {
+  color: black;
+  text-decoration: none;
+}
+
+header > a:hover {
+  text-decoration: none;
+}
+
+.duck-header {
+  width: 85px;
+}
 
 .main-header {
   align-items: center;
@@ -12,6 +32,11 @@ $charcoal: #bbb;
     font-size: 1.2em;
     margin: 0 15px;
   }
+}
+
+.main-header {
+  background-color: white;
+  height: 75px;
 }
 
 .main-header > nav {
