--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -36,7 +36,7 @@ header > a:hover {
 
 .main-header {
   background-color: white;
-  height: 75px;
+  height: 80px;
 }
 
 .main-header > nav {
@@ -49,7 +49,7 @@ header > a:hover {
 @media (max-width: 600px) {
   .main-header {
     flex-direction: column;
-    font-size: 0.7em;
+    font-size: .7em;
     height: auto;
     padding: 10px;
 
