Add primitive functionality to user profile

--- a/src/App.scss
+++ b/src/App.scss
@@ -62,9 +62,13 @@ img {
 }
 
 .card-header {
+  background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.card-footer {
+  background-color: white;
 }
 
 .duck-like {
