--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -16,6 +16,11 @@ header > a:hover {
   text-decoration: none;
 }
 
+.avatar {
+  width: 50px;
+  border-radius: 25%;
+}
+
 .duck-header {
   width: 85px;
 }
