--- a/src/App.scss
+++ b/src/App.scss
@@ -59,7 +59,7 @@ img {
 
 .card {
   margin-top: 25px;
-  width: 50vw;
+  width: 46vw;
 }
 
 .card-header {
@@ -96,6 +96,10 @@ img {
 
 .form-border {
   border: 0;
+}
+
+.icon {
+  font-size: 35px;
 }
 
 .modal-container {
@@ -143,9 +147,17 @@ img {
 }
 
 ol {
-  margin-top: 75px;
+  margin-top: 100px;
 }
 
 .single-post {
   margin-bottom: 50px;
+}
+
+.upload-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
 }
