--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -8,14 +8,14 @@ h1 {
   font-family: 'Grand Hotel', cursive;
 }
 
-header > a {
+.header-h1 {
   color: black;
   text-decoration: none;
 }
 
-header > a:hover {
+.header-h1:hover {
   text-decoration: none;
-  color: #171717;
+  color: #292828;
 }
 
 .avatar {
