--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -71,6 +71,13 @@ input {
   margin-right: 125px;
 }
 
+.nav-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .main-header {
   align-items: center;
   background-color: white;
