--- a/src/App.scss
+++ b/src/App.scss
@@ -111,7 +111,6 @@ img {
 
 .card-header-right {
   margin-left: 45%;
-  right: 0;
 }
 
 .comment-section, .single-comment-section {
@@ -214,6 +213,10 @@ img {
   margin: 10px 0 10px 20px;
 }
 
+.margin-top {
+  margin-top: 100px;
+}
+
 .modal-container {
   align-items: center;
   display: flex;
@@ -262,11 +265,6 @@ img {
   justify-content: center;
 }
 
-ol {
-  margin-left: 0 !important;
-  margin-top: 100px;
-  width: 100%;
-}
 
 .single-post {
   display: flex;
@@ -275,7 +273,7 @@ ol {
 }
 
 .sidebar-div {
-  margin-top: 175px;
+  margin-top: 25px;
   position: fixed;
   right: 16%;
 }
@@ -288,13 +286,11 @@ ol {
 }
 
 .sidebar-userless {
-  margin-top: 100px;
   position: fixed;
   right: 16%;
 }
 
 .sidebar-user {
-  margin-top: 125px;
   position: fixed;
   right: 25%;
 }
@@ -345,6 +341,17 @@ span > * {
   display: inline-block;
 }
 
+@media (max-width: 1200px) {
+  .sidebar-user, .sidebar-userless, .sidebar-div {
+    margin-right: -10%;
+  }
+}
+
+@media (max-width: 991px) {
+  .sidebar-user, .sidebar-userless, .sidebar-div {
+    display: none;
+  }
+}
 
 @media (max-width: 950px) {
   #root {
@@ -352,9 +359,32 @@ span > * {
   }
   .card {
     width: 100% !important;
-    margin-left: -10%;
   }
-  .sidebar-user, .sidebar-card {
-    display: none;
+}
+
+@media (max-width: 770px) {
+  .card-header-right {
+    margin-left: 22%;
+  }
+  .form-border {
+    width: 375px;
+  }
+}
+
+@media (max-width: 500px) {
+  .form-border {
+    width: 325px;
+  }
+}
+
+@media (max-width: 375px) {
+  .form-border {
+    width: 200px;
+  }
+  .card {
+    margin-top: 25px;
+  }
+  .card-header-right {
+    margin-left: -10%;
   }
 }
