Fix anchor tag hovers to stay black

--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -44,6 +44,14 @@ input {
   font-family: 'FontAwesome', 'Lato';
 }
 
+.icon {
+  color: black;
+}
+
+.icon:hover {
+  color: #292828;
+  text-decoration: none;
+}
 
 .search-icon {
   margin: auto 5px;
