--- a/src/App.scss
+++ b/src/App.scss
@@ -92,6 +92,7 @@ img {
   flex-direction: row;
   justify-content: left;
   padding: 0 auto;
+  width: 100%;
 }
 
 .card-footer {
@@ -114,8 +115,8 @@ img {
   width: 200px;
 }
 
-.card-header-right {
-  margin-left: 45%;
+.right {
+  margin-left: auto;
 }
 
 .comment-section, .single-comment-section {
@@ -404,9 +405,6 @@ span > * {
 }
 
 @media (max-width: 770px) {
-  .card-header-right {
-    margin-left: 22%;
-  }
   .form-border, .form-border-s {
     width: 375px;
   }
@@ -432,9 +430,5 @@ span > * {
 
   .card {
     margin-top: 25px;
-  }
-
-  .card-header-right {
-    margin-left: -10%;
   }
 }
