Add primitive stories feature

--- a/src/App.scss
+++ b/src/App.scss
@@ -284,6 +284,10 @@ img {
   justify-content: center;
 }
 
+.red-ring {
+  border: 3px solid rgb(196, 53, 22);
+}
+
 
 .single-post {
   display: flex;
