--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,10 @@ html,
   background-color: $error;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .avatar-profile {
   width: 100px;
   border-radius: 50%;
@@ -285,7 +289,9 @@ img {
 }
 
 .red-ring {
-  border: 3px solid rgb(196, 53, 22);
+  border: 3px solid rgba(196, 53, 22, .7);
+  cursor: pointer;
+  z-index: 8;
 }
 
 
@@ -330,13 +336,13 @@ img {
 
 .sidebar-small {
   font-weight: 700;
-  margin: 0 0 0 15px;
+  margin: 0 0 0 35px;
 }
 
 .sidebar-super-small {
   color: rgb(133, 133, 133);
   font-size: 12px;
-  margin: 0 0 0 15px;
+  margin: 0 0 0 35px;
 }
 
 
