--- a/src/App.scss
+++ b/src/App.scss
@@ -119,6 +119,14 @@ img {
   width: 200px;
 }
 
+.chat-window {
+  background-color: rgb(231, 231, 231);
+  border: 1px solid black;
+  height: 400px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
 .right {
   margin-left: auto;
 }
