--- a/src/App.scss
+++ b/src/App.scss
@@ -125,6 +125,20 @@ img {
   height: 400px;
   overflow: hidden;
   overflow-y: scroll;
+  position: absolute;
+  right: 300px;
+  top: 100px;
+  width: 600px;
+}
+
+.chat-input {
+  border: 1px solid black;
+  border-top: 0;
+  padding-left: 10px;
+  position: absolute;
+  right: 300px;
+  top: 500px;
+  width: 600px;
 }
 
 .right {
@@ -403,7 +417,8 @@ img {
   background-color: rgb(230, 225, 225);
   border-radius: 15px;
   margin-right: 10px;
-  padding: 5px 10px;
+  padding: 5px 20px;
+  margin-right: 10px;
 }
 
 .yellow {
@@ -411,6 +426,7 @@ img {
   border-radius: 15px;
   margin-right: 10px;
   padding: 5px 10px;
+  margin-left: 10px;
 }
 
 span > * {
