Large message overhaul including styling and rendering

--- a/src/App.scss
+++ b/src/App.scss
@@ -121,7 +121,7 @@ img {
 
 .chat-window {
   background-color: rgb(231, 231, 231);
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0 , 0, .125);
   height: 400px;
   overflow: hidden;
   overflow-y: scroll;
@@ -132,7 +132,7 @@ img {
 }
 
 .chat-input {
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0 , 0, .125);
   border-top: 0;
   padding-left: 10px;
   position: absolute;
@@ -231,6 +231,11 @@ img {
   font-size: 35px;
 }
 
+.icon-sm {
+  font-size: 20px;
+  color: blue;
+}
+
 .image-background {
   background-color: white;
   border: 1px solid rgba(0, 0 , 0 , .125);
@@ -257,20 +262,32 @@ img {
   margin: 10px 0 10px 20px;
 }
 
+.margin-left-5 {
+  margin-left: 5px;
+}
+
 .margin-top {
   margin-top: 100px;
+}
+
+.margin-top-5 {
+  margin-top: 5px;
 }
 
 .message-left {
   align-items: flex-start;
   display: flex;
   justify-content: flex-start;
+  margin-left: 10px;
+  margin-top: 5px;
 }
 
 .message-right {
   align-items: flex-start;
   display: flex;
   justify-content: flex-end;
+  margin-right: 10px;
+  margin-top: 5px;
 }
 
 .modal-container {
@@ -292,6 +309,17 @@ img {
 
 .no-display {
   display: none;
+}
+
+.not-added-list {
+  border: 1px solid rgba(0,0,0,.125);
+  border-right: 0;
+  border-top: 0;
+  height: 137px;
+  overflow-y: scroll;
+  position: absolute;
+  top: 300px;
+  width: 340px;
 }
 
 .picture-description {
@@ -377,6 +405,17 @@ img {
   margin: 0 0 0 35px;
 }
 
+.chat-super-small {
+  color: rgb(133, 133, 133);
+  font-size: 12px;
+  margin-left: 10px;
+}
+
+.chat-sidebar {
+  font-weight: 700;
+  margin-left: 10px;
+}
+
 .sidebar-super-small {
   color: rgb(133, 133, 133);
   font-size: 12px;
@@ -409,6 +448,13 @@ img {
   border-radius: 3px;
   margin: 10px 0;
   outline: 0;
+}
+
+.user-list {
+  border: 1px solid rgba(0, 0, 0, .125);
+  height: 300px;
+  overflow-y: scroll;
+  width: 340px;
 }
 
 // messaging colors
