--- a/src/App.scss
+++ b/src/App.scss
@@ -85,6 +85,18 @@ img {
   z-index: 10;
 }
 
+.box {
+  background-color: $white;
+  border: 1px solid $border;
+  border-top: 0;
+  height: 37px;
+  padding-left: 10px;
+  position: absolute;
+  right: 300px;
+  top: 500px;
+  width: 600px;
+}
+
 .card {
   margin-bottom: 7px;
   margin-left: 0;
@@ -311,6 +323,13 @@ img {
 
 .modal-title {
   margin: 0 auto;
+}
+
+.new-chat-message {
+  border-radius: 5px;
+  margin: auto;
+  padding: 5px;
+  position: absolute;
 }
 
 .no-display {
