Fix margin-left on when a post was made

--- a/src/App.scss
+++ b/src/App.scss
@@ -188,6 +188,7 @@ img {
 
 .card-text {
   margin-bottom: 5px;
+  margin-left: 0;
 }
 
 .chat-mobile-container {
@@ -473,7 +474,7 @@ img {
 }
 
 .text-muted {
-  margin-left: 20px;
+  margin-left: 0px;
 }
 
 .upload-input {
